[package]
name = "shoot"
version = "0.1.0"
authors = ["hulufei <ihulufei@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
cursive = { version = "0.16", features = ["termion-backend"] }
structopt = { version = "0.3", default-features = false }
